Finished basic config, deleted unused widges

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,11 +18,11 @@ description = ""
 sharing_image = "Fancheng.png"
 
 # Twitter username (without @). Used when a vistor shares your site on Twitter.
-twitter = "fanchengfc"
+# twitter = "fanchengfc"
 
 # Diplay a logo in navigation bar rather than title (optional).
 #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
-logo = "F.png"
+logo = "icon.png"
 
 # Enable global source code highlighting? true/false
 # Documentation: https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
@@ -50,22 +50,15 @@ time_format = "3:04 PM"
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-# email = ""
+email = "Fan.Cheng@monash.edu"
 # phone = ""
-# address = "900 Dandenong Rd, Caulfield East VIC 3145, Melbourne, Australia"
+address = "[Department of Econometrics & Business Statistics, Monash University, 900 Dandenong Rd, Caulfield East VIC 3145, Australia](https://www.monash.edu/business/ebs)"
 email_form = 0
-
-# Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
-# office_hours = """Monday 10:00 to 13:00<br>
-#                  Wednesday 09:00 to 10:00"""
-
-# Enter an optional link for booking appointments (e.g. calendly.com).
-# appointment_url = "https://calendly.com"
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 # contact_links = [
-  # {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/fanchengfc"},
+  # {icon = "twitter", icon_pack = "fab", name = "Twitter", link = "https://twitter.com/fanchengfc"}
   # {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
   # {icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
   # {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
