--- a/config.toml
+++ b/config.toml
@@ -69,6 +69,9 @@ math = true
   publication_type = "publication_types"
   author = "authors"
 
+[permalinks]
+    post = "/:year/:month/:day/:slug"
+
 # Contact
 [params]
   # Color theme.
