--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,20 +18,15 @@
   url = "#projects"
   weight = 30
 
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
-
 # [[main]]
-#  name = "Tutorials"
-#  url = "/tutorial/"
-#  weight = 50
+#  name = "Publications"
+#  url = "#featured"
+#  weight = 40
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
