--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,7 @@ enableGitInfo = false
 defaultContentLanguage = "en"
 hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
 defaultContentLanguageInSubdir = false
+removePathAccents = true  # Workaround for https://github.com/gohugoio/hugo/issues/5687
 
 paginate = 10  # Number of items per page in paginated lists.
 enableEmoji = true
@@ -75,9 +76,10 @@ math = true
 # Contact
 [params]
   # Color theme.
-  #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
+  #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`, 'custom`.
+  #   See the full list of theme names in 'themes/hugo-academic/data/themes/'.
   # 'custom' is adopted from https://lmyint.github.io/post/hugo-academic-tips/.
-  color_theme = "default"
+  color_theme = "custom"
   email = "Fan.Cheng@monash.edu"
   address = ""
   office_hours = ""
