Reorganize widges in config/menus.toml

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,11 +9,6 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
-
-[[main]]
   name = "Projects"
   url = "#projects"
   weight = 20
@@ -22,15 +17,26 @@
   name = "Talks"
   url = "#talks"
   weight = 20
+  
+[[main]]
+  name = "Teaching"
+  url = "#talks"
+  weight = 20
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 30
+  name = "Blog"
+  url = "#posts"
+  weight = 10
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+# Current CV link generated from https://github.com/ffancheng/fancv. 
+[[main]]
+   name = "CV"
+   url = "https://cv.fancheng.me"
+   weight = 10
+   
+[[main]]
+  name = "Contact"
+  url = "#contact"
+  weight = 10
