--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,7 @@ math = true
   #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`, 'custom`.
   #   See the full list of theme names in 'themes/hugo-academic/data/themes/'.
   # 'custom' is adopted from https://lmyint.github.io/post/hugo-academic-tips/.
-  color_theme = "custom"
+  color_theme = "default"
   email = "Fan.Cheng@monash.edu"
   address = ""
   office_hours = ""
