--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,34 +9,34 @@
   weight = 10
 
 [[main]]
-  name = "Projects"
-  url = "#project"
+  name = "Publications"
+  url = "#featured"
   weight = 20
 
 [[main]]
   name = "Talks"
-  url = "#talk"
+  url = "#talks"
   weight = 30
   
-#[[main]]
-#  name = "Teaching"
-#  url = "#teaching"
-#  weight = 40
+[[main]]
+  name = "Projects"
+  url = "#projects"
+  weight = 40
 
 [[main]]
   name = "Blog"
-  url = "#post"
+  url = "#posts"
   weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # Current CV link generated from https://github.com/ffancheng/fancv. 
-#[[main]]
-#   name = "CV"
-#   url = "https://cv.fancheng.me"
-#   weight = 60
+[[main]]
+  name = "CV"
+  url = "https://cv.fancheng.me"
+  weight = 60
    
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
