--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -27,16 +27,21 @@
   weight = 40
   
 [[main]]
+  name = "Teaching"
+  url = "#teaching"
+  weight = 50  
+  
+[[main]]
   name = "Projects"
   url = "#projects"
-  weight = 50
+  weight = 60
 
 [[main]]
   name = "Blog"
   url = "#posts"
-  weight = 60
+  weight = 70
    
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 70
+  weight = 80
