--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,7 +13,7 @@
 # Current CV link generated from https://github.com/ffancheng/fancv. 
 [[main]]
   name = "CV"
-  url = "https://fancheng.me/FanCVs"
+  url = "https://fancheng.me/FanCV"
   weight = 20
   
 [[main]]
